--- a/package.json
+++ b/package.json
@@ -4,12 +4,21 @@
     "@babel/core": "^7.6.4",
     "@babel/node": "^7.6.3",
     "@babel/preset-env": "^7.6.3",
+    "axios": "^0.19.0",
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "commander": "^4.0.0",
+    "crypto-js": "^3.1.9-1",
+    "csv-parser": "^2.3.1",
+    "mongoose": "^5.7.7",
+    "node-http-xhr": "^1.3.4",
     "node-podcast-parser": "^2.3.0",
     "nodemon": "^1.19.4",
-    "rimraf": "^3.0.0"
+    "p-queue": "^6.2.0",
+    "redis": "^2.8.0",
+    "requests": "^0.3.0",
+    "rimraf": "^3.0.0",
+    "xml2js": "^0.4.22"
   },
   "scripts": {
     "build": "rimraf dist/ && babel ./src --out-dir dist/  --copy-files",
