--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "axios": "^0.19.0",
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
+    "cluster": "^0.7.7",
     "commander": "^4.0.0",
+    "convict": "^5.2.0",
     "crypto-js": "^3.1.9-1",
     "csv-parser": "^2.3.1",
-    "mongoose": "^5.7.7",
+    "mongoose": "^5.7.8",
     "node-http-xhr": "^1.3.4",
     "node-podcast-parser": "^2.3.0",
     "nodemon": "^1.19.4",
